# librepcb-parts-generator

./: README.md  pyproject.toml
.github/workflows/: main.yml
librepcb_parts_generator/: __init__.py
librepcb_parts_generator/entities/: attribute.py  common.py  component.py  device.py  indent.py  package.py  symbol.py
