[project]
name = "librepcb-parts-generator"
version = "0.2.0"
authors = [
    { name = "Danilo Bargen", email = "mail@dbrgn.ch" },
    { name = "Raphael Nestler", email = "raphael.nestler@gmail.com" },
]

requires-python = ">=3.9"
dependencies = ["cadquery == 2.5.1"]


[tool.setuptools.packages.find]
exclude = ["out*"]

[tool.mypy]
warn_unused_configs = true
strict = true
exclude = ['build']

[[tool.mypy.overrides]]
module = [
    'test_common',
    'test_generate_connectors',
    'test_generate_qfn',
    'test_generate_idc',
    'test_generate_stm_mcu',
]
disallow_untyped_defs = false


[tool.pytest.ini_options]
addopts = "--doctest-modules"


[dependency-groups]
dev = ["pytest", "mypy == 1.10.0", "ruff ~= 0.12.2"]
